src/BulletSharpPInvoke/Collision/CollisionWorld.cs


		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btCollisionWorld_ConvexResultCallback_addSingleResult(IntPtr obj, IntPtr convexResult, bool normalInWorldSpace);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btCollisionWorld_ConvexResultCallback_getClosestHitFraction(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern short btCollisionWorld_ConvexResultCallback_getCollisionFilterGroup(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern short btCollisionWorld_ConvexResultCallback_getCollisionFilterMask(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern bool btCollisionWorld_ConvexResultCallback_hasHit(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern bool btCollisionWorld_ConvexResultCallback_needsCollision(IntPtr obj, IntPtr proxy0);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ConvexResultCallback_setClosestHitFraction(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ConvexResultCallback_setCollisionFilterGroup(IntPtr obj, short value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ConvexResultCallback_setCollisionFilterMask(IntPtr obj, short value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ConvexResultCallback_delete(IntPtr obj);
	}

	public class ClosestConvexResultCallback : ConvexResultCallback
	{
		internal ClosestConvexResultCallback(IntPtr native)
			: base(native)
		{
		}

		public ClosestConvexResultCallback(ref Vector3 convexFromWorld, ref Vector3 convexToWorld)
			: base(btCollisionWorld_ClosestConvexResultCallback_new(ref convexFromWorld, ref convexToWorld))
		{
		}

		public ClosestConvexResultCallback(Vector3 convexFromWorld, Vector3 convexToWorld)
			: base(btCollisionWorld_ClosestConvexResultCallback_new(ref convexFromWorld, ref convexToWorld))
		{
		}

		public Vector3 ConvexFromWorld
		{
			get
			{
				Vector3 value;
				btCollisionWorld_ClosestConvexResultCallback_getConvexFromWorld(_native, out value);
				return value;
			}
			set { btCollisionWorld_ClosestConvexResultCallback_setConvexFromWorld(_native, ref value); }
		}

		public Vector3 ConvexToWorld
		{
			get
			{
				Vector3 value;
				btCollisionWorld_ClosestConvexResultCallback_getConvexToWorld(_native, out value);
				return value;
			}
			set { btCollisionWorld_ClosestConvexResultCallback_setConvexToWorld(_native, ref value); }
		}

		public CollisionObject HitCollisionObject
		{
			get { return CollisionObject.GetManaged(btCollisionWorld_ClosestConvexResultCallback_getHitCollisionObject(_native)); }
			set { btCollisionWorld_ClosestConvexResultCallback_setHitCollisionObject(_native, value._native); }
		}

		public Vector3 HitNormalWorld
		{
			get
			{
				Vector3 value;
				btCollisionWorld_ClosestConvexResultCallback_getHitNormalWorld(_native, out value);
				return value;
			}
			set { btCollisionWorld_ClosestConvexResultCallback_setHitNormalWorld(_native, ref value); }
		}

		public Vector3 HitPointWorld
		{
			get
			{
				Vector3 value;
				btCollisionWorld_ClosestConvexResultCallback_getHitPointWorld(_native, out value);
				return value;
			}
			set { btCollisionWorld_ClosestConvexResultCallback_setHitPointWorld(_native, ref value); }
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_ClosestConvexResultCallback_new([In] ref Vector3 convexFromWorld, [In] ref Vector3 convexToWorld);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_getConvexFromWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_getConvexToWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_ClosestConvexResultCallback_getHitCollisionObject(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_getHitNormalWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_getHitPointWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_setConvexFromWorld(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_setConvexToWorld(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_setHitCollisionObject(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_setHitNormalWorld(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_setHitPointWorld(IntPtr obj, [In] ref Vector3 value);
	}

    public class AllHitsConvexResultCallback : ConvexResultCallback
    {
        readonly List<Vector3> mHitsNormalWorld = new List<Vector3>();
        readonly List<Vector3> mHitsPointWorld = new List<Vector3>();
        readonly List<CollisionObject> mCollisionObjects = new List<CollisionObject>();

        public List<Vector3> HitNormalWorld
        {
            get
            {
                return mHitsNormalWorld;
            }
        }

        public List<Vector3> HitPointWorld
        {
            get
            {
                return mHitsPointWorld;
            }
        }

        public List<CollisionObject> CollisionObjects
        {
            get
            {
                return mCollisionObjects;
            }
        }

        [UnmanagedFunctionPointer(Native.Conv)]
        protected delegate float AddSingleResultUnmanagedDelegate(IntPtr sharpReference, IntPtr collider, [In] ref Vector3 point, [In] ref Vector3 normal);

        AddSingleResultUnmanagedDelegate _addSingleResult;


#if __iOS__
        [MonoPInvokeCallback(typeof(AddSingleResultUnmanagedDelegate))]
#endif
        static float AddSingleResultUnmanaged(IntPtr sharpReference, IntPtr collider, [In] ref Vector3 point, [In] ref Vector3 normal)
        {
            var obj = (AllHitsConvexResultCallback)GCHandle.FromIntPtr(sharpReference).Target;

            obj.mHitsNormalWorld.Add(normal);
            obj.mHitsPointWorld.Add(point);
            obj.mCollisionObjects.Add(CollisionObject.GetManaged(collider));

            return 0.0f;
        }

        internal AllHitsConvexResultCallback(IntPtr native)
			: base(native)
		{
		}

        private GCHandle mHandle;

		public AllHitsConvexResultCallback()
            : base(IntPtr.Zero)
		{
		    mHandle = GCHandle.Alloc(this);

            _addSingleResult = new AddSingleResultUnmanagedDelegate(AddSingleResultUnmanaged);
#if !__iOS__
            _native = btCollisionWorld_AllHitsConvexResultCallback_new(Marshal.GetFunctionPointerForDelegate(_addSingleResult), GCHandle.ToIntPtr(mHandle));
#else
            _native = btCollisionWorld_AllHitsConvexResultCallback_new(_addSingleResult, GCHandle.ToIntPtr(mHandle));
#endif
		}

        ~AllHitsConvexResultCallback()
        {
            mHandle.Free();
        }

#if !__iOS__
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        protected static extern IntPtr btCollisionWorld_AllHitsConvexResultCallback_new(IntPtr resultCallback, IntPtr sharpReference);
#else
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        protected static extern IntPtr btCollisionWorld_AllHitsConvexResultCallback_new(AddSingleResultUnmanagedDelegate resultCallback, IntPtr sharpReference);
#endif
    }

	public abstract class ContactResultCallback : IDisposable
	{
		internal IntPtr _native;

        [UnmanagedFunctionPointer(Native.Conv)]
		delegate float AddSingleResultUnmanagedDelegate(IntPtr cp, IntPtr colObj0Wrap, int partId0, int index0, IntPtr colObj1Wrap, int partId1, int index1);
        [UnmanagedFunctionPointer(Native.Conv)]
		delegate bool NeedsCollisionUnmanagedDelegate(IntPtr proxy0);

		AddSingleResultUnmanagedDelegate _addSingleResult;
		NeedsCollisionUnmanagedDelegate _needsCollision;

		public ContactResultCallback()
		{
			_addSingleResult = new AddSingleResultUnmanagedDelegate(AddSingleResultUnmanaged);
			_needsCollision = new NeedsCollisionUnmanagedDelegate(NeedsCollisionUnmanaged);
			_native = btCollisionWorld_ContactResultCallbackWrapper_new(
				Marshal.GetFunctionPointerForDelegate(_addSingleResult),
				Marshal.GetFunctionPointerForDelegate(_needsCollision));
		}

		float AddSingleResultUnmanaged(IntPtr cp, IntPtr colObj0Wrap, int partId0, int index0, IntPtr colObj1Wrap, int partId1, int index1)
		{
			return AddSingleResult(new ManifoldPoint(cp, true),
				new CollisionObjectWrapper(colObj0Wrap), partId0, index0,
				new CollisionObjectWrapper(colObj1Wrap), partId1, index1);
		}

		public abstract float AddSingleResult(ManifoldPoint cp, CollisionObjectWrapper colObj0Wrap, int partId0, int index0, CollisionObjectWrapper colObj1Wrap, int partId1, int index1);

		bool NeedsCollisionUnmanaged(IntPtr proxy0)
		{
			return NeedsCollision(BroadphaseProxy.GetManaged(proxy0));
		}

		public virtual bool NeedsCollision(BroadphaseProxy proxy0)
		{
			return btCollisionWorld_ContactResultCallbackWrapper_needsCollision(_native, proxy0._native);
		}

		public short CollisionFilterGroup
		{
			get { return btCollisionWorld_ContactResultCallback_getCollisionFilterGroup(_native); }
			set { btCollisionWorld_ContactResultCallback_setCollisionFilterGroup(_native, value); }
		}

		public short CollisionFilterMask
		{
			get { return btCollisionWorld_ContactResultCallback_getCollisionFilterMask(_native); }
			set { btCollisionWorld_ContactResultCallback_setCollisionFilterMask(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btCollisionWorld_ContactResultCallback_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~ContactResultCallback()
		{
			Dispose(false);
		}

	    [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern short btCollisionWorld_ContactResultCallback_getCollisionFilterGroup(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern short btCollisionWorld_ContactResultCallback_getCollisionFilterMask(IntPtr obj);
